--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
         <img src="bg.jpg" />
       </div>
       <div class="contentBx">
-        <h3 class="logoText">NAIP</h3>
+        <h4 class="logoText">*NAIP Logo*</h4>
         <div>
           <h4>
             <span>
-              Investing in a diverse ecosystem of innovative founders
+              Investing in a Diverse Ecosystem of Innovative Founders <br />
+              <span style="color: black; font-size: 1.5rem">
+                We Are Nigeran American Investment Partners</span
+              >
             </span>
           </h4>
           <br /><br />
 
-          <a href="#about" class="btn">About Us</a>
+          <a href="#about" class="btn">Learn More</a>
         </div>
       </div>
     </section>
@@ -34,17 +37,20 @@
       <div class="content">
         <div class="textBx">
           <p>
-            <strong style="font-weight: 700"> Background -</strong> We are a
-            group of Nigerian Americans leveraging our professional background
-            and years of experience across multiple industries to empower
-            founders and entrepreneurs through investments, advisory and
-            support. <br /><br /><strong style="font-weight: 700"
-              >Vision -</strong
+            <strong style="font-weight: 700; font-size: 1.2rem">
+              Background:</strong
+            >
+            We are a group of Nigerian Americans leveraging our professional
+            background and years of experience across multiple industries to
+            empower founders and entrepreneurs through investments, advisory and
+            support. <br /><br /><br /><strong
+              style="font-weight: 700; font-size: 1.2rem"
+              >Vision:</strong
             >
             Providing access to knowledge and capital for entrepreneurs seeking
-            to nurture an idea and grow it to fruition.<br /><br /><strong
-              style="font-weight: 700"
-              >Philosophy -</strong
+            to nurture an idea and grow it to fruition.<br /><br /><br /><strong
+              style="font-weight: 700; font-size: 1.2rem"
+              >Philosophy:</strong
             >
             Build generational wealth by investing in businesses that not only
             seek profits but also leave a positive impact in their communities.
@@ -58,60 +64,65 @@
 
     <section class="services" id="services">
       <div class="title">
-        <h2>*Where We Play or Portfolio*</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ullam,
-          molestias excepturi earum placeat amet aspernatur pariatur vero aut.
-        </p>
+        <h2>Portfolio</h2>
+        <br />
       </div>
+      <p></p>
       <div class="content">
         <div class="servicesBx">
           <h2>E-Commerce</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
-            fugit voluptas vero, quibusdam neque aspernatur laboriosam.
+            *Brief summary (1-2 sentence) on what you guys are doing in this
+            industry*
           </p>
         </div>
         <div class="servicesBx">
           <h2>Healthcare</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
-            fugit voluptas vero, quibusdam neque aspernatur laboriosam.
+            *Brief summary (1-2 sentence) on what you guys are doing in this
+            industry*
           </p>
         </div>
         <div class="servicesBx">
           <h2>FinTech</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
-            fugit voluptas vero, quibusdam neque aspernatur laboriosam.
+            *Brief summary (1-2 sentence) on what you guys are doing in this
+            industry*
           </p>
         </div>
         <div class="servicesBx">
           <h2>Commercial Real-Estate</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
-            fugit voluptas vero, quibusdam neque aspernatur laboriosam.
+            *Brief summary (1-2 sentence) on what you guys are doing in this
+            industry*
           </p>
         </div>
         <div class="servicesBx">
           <h2>BioTech</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
-            fugit voluptas vero, quibusdam neque aspernatur laboriosam.
+            *Brief summary (1-2 sentence) on what you guys are doing in this
+            industry*
           </p>
         </div>
         <div class="servicesBx">
           <h2>Enterprise Software</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
-            fugit voluptas vero, quibusdam neque aspernatur laboriosam.
+            *Brief summary (1-2 sentence) on what you guys are doing in this
+            industry*
           </p>
         </div>
         <div class="servicesBx">
-          <h2>Consumer Tech</h2>
+          <h2>Gaming/Consumer Tech</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
-            fugit voluptas vero, quibusdam neque aspernatur laboriosam.
+            *Brief summary (1-2 sentence) on what you guys are doing in this
+            industry*
+          </p>
+        </div>
+        <div class="servicesBx">
+          <h2>Supply Chain/Logistics'</h2>
+          <p>
+            *Brief summary (1-2 sentence) on what you guys are doing in this
+            industry*
           </p>
         </div>
       </div>
@@ -120,11 +131,8 @@
     <section class="work" id="work">
       <div class="title">
         <h2>Investment Team</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ullam,
-          molestias excepturi earum placeat amet aspernatur pariatur vero aut.
-        </p>
       </div>
+      <p><br /></p>
       <div class="content">
         <div class="workBx">
           <div class="imgBx">
@@ -260,17 +268,6 @@
         </div>
         <div class="workBx">
           <div class="imgBx">
-            <img src="img14.jpg" />
-          </div>
-          <div class="textBx">
-            <h3>
-              Okemefuna <br />
-              Okpara <br /><br />View LinkedIn
-            </h3>
-          </div>
-        </div>
-        <div class="workBx">
-          <div class="imgBx">
             <img src="img15.jpg" />
           </div>
           <div class="textBx">
@@ -302,16 +299,24 @@
             </h3>
           </div>
         </div>
+        <div class="workBx">
+          <div class="imgBx">
+            <img src="img14.jpg" />
+          </div>
+          <div class="textBx">
+            <h3>
+              Okemefuna <br />
+              Okpara <br /><br />View LinkedIn
+            </h3>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="contact" id="contact">
       <div class="title white">
         <h2>Contact Us</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ullam,
-          molestias excepturi earum placeat amet aspernatur pariatur vero aut.
-        </p>
+        <br />
       </div>
       <div class="contactForm">
         <div class="row">
@@ -351,7 +356,7 @@
       <ul class="menu">
         <li><a href="#home" onclick="toggleMenu();">Home</a></li>
         <li><a href="#about" onclick="toggleMenu();">About</a></li>
-        <li><a href="#services" onclick="toggleMenu();">Where We Play</a></li>
+        <li><a href="#services" onclick="toggleMenu();">Portfolio</a></li>
         <li><a href="#work" onclick="toggleMenu();">Team</a></li>
         <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
       </ul>
