--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span>
               Investing in a Diverse Ecosystem of Innovative Founders <br />
               <span style="color: black; font-size: 1.5rem">
-                We Are Nigeran American Investment Partners</span
+                We Are Nigerian American Investment Partners</span
               >
             </span>
           </h4>
