--- a/index.html
+++ b/index.html
@@ -70,59 +70,33 @@
       <p></p>
       <div class="content">
         <div class="servicesBx">
-          <h2>E-Commerce</h2>
-          <p>
-            *Brief summary (1-2 sentence) on what you guys are doing in this
-            industry*
-          </p>
-        </div>
-        <div class="servicesBx">
           <h2>Healthcare</h2>
           <p>
-            *Brief summary (1-2 sentence) on what you guys are doing in this
-            industry*
+            Physician specialty care in in-vitro fertilization (IVF) services
+            and healthcare diagnostic imaging nanotechnology in cancer care
+            treatment
           </p>
         </div>
         <div class="servicesBx">
           <h2>FinTech</h2>
           <p>
-            *Brief summary (1-2 sentence) on what you guys are doing in this
-            industry*
+            Platform-based services and technology kits for institutions that
+            provide banking and other financial services to consumers
           </p>
         </div>
+
         <div class="servicesBx">
           <h2>Commercial Real-Estate</h2>
           <p>
-            *Brief summary (1-2 sentence) on what you guys are doing in this
-            industry*
+            Revitalization and renovation of commercial and residential
+            properties in highly-desirable markets for rent / resale
           </p>
         </div>
         <div class="servicesBx">
-          <h2>BioTech</h2>
+          <h2>Gaming</h2>
           <p>
-            *Brief summary (1-2 sentence) on what you guys are doing in this
-            industry*
-          </p>
-        </div>
-        <div class="servicesBx">
-          <h2>Enterprise Software</h2>
-          <p>
-            *Brief summary (1-2 sentence) on what you guys are doing in this
-            industry*
-          </p>
-        </div>
-        <div class="servicesBx">
-          <h2>Gaming/Consumer Tech</h2>
-          <p>
-            *Brief summary (1-2 sentence) on what you guys are doing in this
-            industry*
-          </p>
-        </div>
-        <div class="servicesBx">
-          <h2>Supply Chain/Logistics'</h2>
-          <p>
-            *Brief summary (1-2 sentence) on what you guys are doing in this
-            industry*
+            Online multi-player gaming platform with near real-life experience
+            for gamers and gaming enthusiasts
           </p>
         </div>
       </div>
@@ -357,7 +331,8 @@
         <li><a href="#home" onclick="toggleMenu();">Home</a></li>
         <li><a href="#about" onclick="toggleMenu();">About</a></li>
         <li><a href="#services" onclick="toggleMenu();">Portfolio</a></li>
-        <li><a href="#work" onclick="toggleMenu();">Team</a></li>
+        <li><a href="Pitch.html" onclick="toggleMenu();">Pitch</a></li>
+        <li><a href="#work" onclick="toggleMenu();">Investment Team</a></li>
         <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
       </ul>
     </div>
