--- a/Pitch.html
+++ b/Pitch.html
@@ -18,7 +18,10 @@
         <p>
           Thanks for your interest in Nigerian American Investment Partners!
           We're excited to learn more about your company and what you're
-          building! Please complete this <a href="">investment form</a> if you'd
+          building! 
+        </p>
+        <p>
+          Please complete this <a href="">investment form</a> if you'd
           like to request funding and we'll reach out as soon as possible.
         </p>
       </div>
