--- a/index.html
+++ b/index.html
@@ -72,31 +72,29 @@
         <div class="servicesBx">
           <h2>Healthcare</h2>
           <p>
-            Physician specialty care in in-vitro fertilization (IVF) services
-            and healthcare diagnostic imaging nanotechnology in cancer care
-            treatment
+            Nanotechnology healthcare diagnostic imaging for cancer treatment
           </p>
         </div>
         <div class="servicesBx">
           <h2>FinTech</h2>
           <p>
-            Platform-based services and technology kits for institutions that
-            provide banking and other financial services to consumers
+            Cloud based platform offering financial institutions a technology
+            kit to enhance user experiences
           </p>
         </div>
 
         <div class="servicesBx">
           <h2>Commercial Real-Estate</h2>
           <p>
-            Revitalization and renovation of commercial and residential
-            properties in highly-desirable markets for rent / resale
+            Revitalization and renovation of commercial/residential properties
+            for rent / resale
           </p>
         </div>
         <div class="servicesBx">
           <h2>Gaming</h2>
           <p>
-            Online multi-player gaming platform with near real-life experience
-            for gamers and gaming enthusiasts
+            Online multiplayer sports simulation gaming platform providing near
+            real-life experiences
           </p>
         </div>
       </div>
