--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="servicesBx">
           <h2>Gaming</h2>
           <p>
-            Online multiplayer sports simulation gaming platform providing near
+            Multiplayer sports simulation gaming platform providing near
             real-life experiences
           </p>
         </div>
@@ -128,6 +128,7 @@
             </h3>
           </div>
         </div>
+
         <div class="workBx">
           <div class="imgBx">
             <img src="img3.jpg" />
@@ -169,6 +170,17 @@
             <h3>
               Ododo <br />
               Enabulele <br /><br />View LinkedIn
+            </h3>
+          </div>
+        </div>
+        <div class="workBx">
+          <div class="imgBx">
+            <img src="img16.jpg" />
+          </div>
+          <div class="textBx">
+            <h3>
+              Khafid <br />
+              Gbadamosi <br /><br />View LinkedIn
             </h3>
           </div>
         </div>
@@ -218,6 +230,17 @@
         </div>
         <div class="workBx">
           <div class="imgBx">
+            <img src="img13.jpg" />
+          </div>
+          <div class="textBx">
+            <h3>
+              John <br />
+              Nwosu <br /><br />View LinkedIn
+            </h3>
+          </div>
+        </div>
+        <div class="workBx">
+          <div class="imgBx">
             <img src="img11.jpg" />
           </div>
           <div class="textBx">
@@ -240,45 +263,23 @@
         </div>
         <div class="workBx">
           <div class="imgBx">
-            <img src="img15.jpg" />
-          </div>
-          <div class="textBx">
-            <h3>
-              Obinna <br />
-              Ufudo <br /><br />View LinkedIn
-            </h3>
-          </div>
-        </div>
-        <div class="workBx">
-          <div class="imgBx">
-            <img src="img16.jpg" />
-          </div>
-          <div class="textBx">
-            <h3>
-              Khafid <br />
-              Gbadamosi <br /><br />View LinkedIn
-            </h3>
-          </div>
-        </div>
-        <div class="workBx">
-          <div class="imgBx">
-            <img src="img13.jpg" />
-          </div>
-          <div class="textBx">
-            <h3>
-              John <br />
-              Nwosu <br /><br />View LinkedIn
-            </h3>
-          </div>
-        </div>
-        <div class="workBx">
-          <div class="imgBx">
             <img src="img14.jpg" />
           </div>
           <div class="textBx">
             <h3>
               Okemefuna <br />
               Okpara <br /><br />View LinkedIn
+            </h3>
+          </div>
+        </div>
+        <div class="workBx">
+          <div class="imgBx">
+            <img src="img15.jpg" />
+          </div>
+          <div class="textBx">
+            <h3>
+              Obinna <br />
+              Ufudo <br /><br />View LinkedIn
             </h3>
           </div>
         </div>
