--- a/Pitch.html
+++ b/Pitch.html
@@ -22,6 +22,7 @@
           <br /><br />
           Please complete this
           <a
+            target="_blank"
             href="https://docs.google.com/forms/d/e/1FAIpQLScKMShbQ0kIjm5h1OSo-_cgY9K03xbuY9T9nXfnePp-ouvvSA/viewform?vc=0&c=0&w=1&flr=0"
             >investment form</a
           >
@@ -37,12 +38,14 @@
 
     <div class="sidebar">
       <ul class="menu">
-        <li><a href="#home" onclick="toggleMenu();">Home</a></li>
-        <li><a href="#about" onclick="toggleMenu();">About</a></li>
-        <li><a href="#services" onclick="toggleMenu();">Portfolio</a></li>
+        <li><a href="index.html" onclick="toggleMenu();">Home</a></li>
+        <li><a href="index.html" onclick="toggleMenu();">About</a></li>
+        <li><a href="index.html" onclick="toggleMenu();">Portfolio</a></li>
         <li><a href="Pitch.html" onclick="toggleMenu();">Pitch</a></li>
-        <li><a href="#work" onclick="toggleMenu();">Investment Team</a></li>
-        <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
+        <li>
+          <a href="index.html" onclick="toggleMenu();">Investment Team</a>
+        </li>
+        <li><a href="index.html" onclick="toggleMenu();">Contact</a></li>
       </ul>
     </div>
 
