--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="bg.jpg" />
       </div>
       <div class="contentBx">
-        <h4 class="logoText">*NAIP Logo*</h4>
+        <img class="logoText" src="NAIP_Logo.png" alt="" />
         <div>
           <h4>
             <span>
